css/home.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");

/* color variables */
:root {
  --clr-primary: #6aeeb5;
  --clr-primary-hover: #29e6a7;
  --clr-primary-dark: #039d69;
  --clr-gray100: #f0f7f8;
  --clr-gray200: #cfd8dc;
  --clr-gray300: #a7b7be;
  --clr-gray400: #6b7e86;
  --clr-gray500: #425a65;
  /* border radius */
  --radius: 0.2rem;
}
/* position of the dropdown button*/
.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  bottom: 50px;
  border-radius: 12px;
  padding-bottom: 16px;
}

.dropdown-content a {
  color: black;
  padding: 8px;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {
  background-color: #f1f1f1;
}

.dropdown:hover .dropdown-content {
  display: block;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Open Sans", sans-serif;
  background: var(--clr-gray100);
}

.nav__list {
  background: white;
  box-shadow: 0px 0px 10px var(--clr-gray200);
  padding: 1rem 0;
  width: 5rem;
  height: 100vh;
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

#above-search {
  display: none;
}

.above {
  margin-left: 5rem;
}

.flex-main {
  margin-left: 5rem;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

.flex-main > .column {
  width: 50%;
  margin-right: 24px;
  margin-left: 24px;
  display: flex;
  flex-direction: column;
}

#mainmain > #stories {
  background-color: red; /* temp */
  margin-top: 24px;
  height: 400px; /* temp */
  width: 100%;
}

#mainmain > #posts {
  background-color: purple; /* temp */
  margin-top: 24px;
  height: 400px; /* temp */
  width: 100%;
  margin-bottom: 24px;
}

#sidemain > #whats-new {
  background-color: #eff0f3;
  margin-top: 24px;
  padding-left: 24px;
  height: 400px; /* temp */
  padding: 24px;
  width: 100%;
  border-radius: 12px;
  box-shadow: 5px 5px 18px -8px rgba(33, 64, 73, 0.65);
}

#sidemain > #recommended-connections {
  background-color: #eff0f3;
  margin-top: 24px;
  padding: 24px;
  width: 100%;
  height: 400px; /* temp */
  border-radius: 12px;
  box-shadow: 5px 5px 18px -8px rgba(33, 64, 73, 0.65);
  margin-bottom: 24px;
}

.nav__item {
  list-style: none;
  font-size: 0.7rem;
  text-align: center;
  transition: all 200ms ease-in;
}

.nav__item svg,
svg {
  fill: var(--clr-gray400);
  width: 2rem;
  transition: all 200ms ease-in;
}

.nav__item svg:hover {
  fill: var(--clr-gray500);
}

.nav__item a {
  color: var(--clr-gray400);
  text-decoration: none;
}

.nav__item a:hover {
  color: var(--clr-gray500);
}

.heading-title {
  padding-top: 24px;
  padding-left: 24px;
}

.search {
  margin-top: 24px;
  border: 2px solid #51b09f;
  overflow: auto;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

.search input[type="text"] {
  font-family: "Montserrat";
  border: 0px;
  width: 80%;
  margin: 0px;
  padding: 10px 10px;
}

.search input[type="text"]:focus {
  outline: 0;
}

.search button {
  font-family: Montserrat;
  border: 0px;
  background: none;
  background-color: #51b09f;
  color: #eff0f3;
  float: right;
  width: 20%;
  height: 100%;
  margin: 0px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
  cursor: pointer;
}

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
}

.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.sidenav a:hover {
  color: #f1f1f1;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.mobile-menu {
  display: none;
}

@media screen and (max-width: 550px) {
  .above {
    margin-left: 0;
  }

  #above-search {
    display: unset;
  }

  #sidemain {
    display: none;
  }

  .flex-main > .column {
    width: 100%;
  }

  .nav__list {
    flex-direction: row;
    width: 100vw;
    height: 5rem;
    bottom: 0;
    justify-content: space-around;
    align-items: center;
    padding: 0 1rem;
  }

  .flex-main {
    margin-left: 0;
  }

  .mobile-menu {
    display: block;
    margin-top: 24px;
    margin-left: 24px;
  }

  .hide-in-mobile {
    display: none;
  }

  .heading-title {
    padding-top: 24px;
    padding-left: 24px;
  }

  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }

  .menu-and-search {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
  }

  .menu-and-search > .mobile-menu > a {
    width: 20%;
    height: auto;
    margin-right: 24px;
  }

  .menu-and-search > #above-search {
    width: 80%;
    margin-right: 24px;
  }

  .search input[type="text"] {
    font-family: "Montserrat";
    border: 0px;
    padding-left: 12px;
    padding-top: 8px;
    padding-bottom: 8px;
    width: 80%;
    height: 100%;
  }

  .search {
    background-color: white;
  }

  .search button {
    padding-top: 10px;
    padding-bottom: 10px;
    width: 20%;
    height: 100%;
  }
}

